# typer

./: .gitignore  ANNOUNCEMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  install.sh  report-claude.md  report-pi.md  update.sh
.github/workflows/: deploy-web.yml
bench/: README.md  llamacpp_bench.py  midline_eval.py  mlx_bench.py  quality_eval.py  quality_gold.jsonl  run_suite.sh
bench/results/: llamacpp_gemma-4-e2b-q4_cold.json  llamacpp_gemma-4-e2b-q4_warm-off.json  llamacpp_gemma-4-e2b-q4_warm-on.json  llamacpp_qwen3-0.6b-q8_cold.json  llamacpp_qwen3-0.6b-q8_warm-off.json  llamacpp_qwen3-0.6b-q8_warm-on.json  llamacpp_qwen3-1.7b-f16_cold.json  llamacpp_qwen3-1.7b-f16_warm-off.json  (+21 more)
docs/: autocomplete-model.md  impl-contract.md  overhaul-spec.md  perf-research.md  review-overhaul.md  wishlist.md
models/: README.md
scripts/: build.sh  install_retrain_agent.sh  llama_server.cpp  make_signing_cert.sh  run_tests.sh  typer_native.swift
training/: .gitignore  README.md  build_dataset.py  build_distill_sft.py  build_human_sft.py  build_typed_eval.py  calibrate_gate.py  collect_human_data.py  distill.yaml  distill_teacher.py  distill_teacher_batch.py  eval.py  eval_compare.py  expand_human_data.py  fetch_corpus.py  fullft.yaml  mem_guard.sh  merge_synth.py  mine_capture.py  pyproject.toml  synth_negatives.py  tokenizer_preflight.py  train.sh  train_variant.sh
web/: announcements.html  compatibility.html  index.html  package.json  research.html  tsconfig.json  v2.html  vite.config.ts  wrangler.jsonc
web/src/: corpus.ts  (+17 more)
(+60 files in other folders)
